syntax = "proto3";

package PhysicalTime;

option go_package = "PhysicalTime/gRPC";

message AskForTimeMessage {
  int64 clientId = 1;
}

message     TimeMessage {
  string serverName = 1;
  int64 nanoSeconds = 2;
}
service TimeAsk {
  rpc AskForTime(AskForTimeMessage) returns (TimeMessage);
}